--- a/Day005_draw_HW.ipynb
+++ b/Day005_draw_HW.ipynb
@@ -118,18 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "warpAffine() missing required argument 'dsize' (pos 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-2ca93c830cd7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;31m# 建構 scale matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[0mM_scale\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mresize_col\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mresize_row\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m \u001b[0mimg_hw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarpAffine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg_hw\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mM_scale\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;31m# 把左上跟右下轉為矩陣型式\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: warpAffine() missing required argument 'dsize' (pos 3)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin point1=[92, 40], origin point2=[452, 510]\n",
+      "resize point1=(46, 20), resize point2=(226, 255)\n"
      ]
     }
    ],
@@ -160,8 +157,9 @@
     "\n",
     "# 透過四則運算計算鏡像後位置\n",
     "# 確保點的位置一樣是左上跟右下，所以交換鏡像後的 x 座標 (y 座標做水平鏡像後位置不變)\n",
-    "point1[0] = 420\n",
-    "point2[0] = 60\n",
+    "point1[0] = w - point1[0]\n",
+    "point2[0] = w - point2[0]\n",
+    "point1[0], point2[0] = point2[0], point1[0]\n",
     "\n",
     "\"\"\"\n",
     "縮放處理 (0.5 倍)\n",
@@ -172,8 +170,9 @@
     "resize_row = int(img_hw.shape[0]*fy)\n",
     "\n",
     "# 建構 scale matrix\n",
-    "M_scale = np.array([resize_col,resize_row])\n",
-    "img_hw = cv2.warpAffine(img_hw,M_scale)\n",
+    "M_scale = np.array([[0.5, 0, 0],\n",
+    "                    [0, 0.5, 0]], dtype=np.float32)\n",
+    "img_hw = cv2.warpAffine(img_hw, M_scale, (resize_col, resize_row))\n",
     "\n",
     "# 把左上跟右下轉為矩陣型式\n",
     "bbox = np.array((point1, point2), dtype=np.float32)\n",
@@ -209,6 +208,73 @@
     "最後再找遮罩的左上跟右下的點的位置\n",
     "\n",
     "這邊會用到許多沒提過的東西，所以當作 optional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin point1=(60, 40), origin point2=(420, 510)\n",
+      "resize point1=(46, 20), resize point2=(225, 254)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_hw = img.copy()\n",
+    "point1 = (60, 40)\n",
+    "point2 = (420, 510)\n",
+    "\n",
+    "# 2D mask\n",
+    "img_mask = np.zeros_like(img_hw)\n",
+    "img_mask[40:510, 60:420, ...] = 255\n",
+    "\n",
+    "\"\"\"\n",
+    "對明亮度做直方圖均衡\n",
+    "\"\"\"\n",
+    "# 原始 BGR 圖片轉 HSV 圖片\n",
+    "img_hw = cv2.cvtColor(img_hw, cv2.COLOR_BGR2HSV)\n",
+    "\n",
+    "# 對明亮度做直方圖均衡 -> 對 HSV 的 V 做直方圖均衡\n",
+    "img_hw[..., -1] = cv2.equalizeHist(img_hw[..., -1])\n",
+    "\n",
+    "# 將圖片轉回 BGR\n",
+    "img_hw = cv2.cvtColor(img_hw, cv2.COLOR_HSV2BGR)\n",
+    "\n",
+    "\"\"\"\n",
+    "水平鏡像 + 縮放處理 (0.5 倍)\n",
+    "\"\"\"\n",
+    "# 水平鏡像 (圖片)\n",
+    "img_hw = img_hw[:, ::-1, :]\n",
+    "img_mask = img_mask[:, ::-1, :]\n",
+    "\n",
+    "# 縮放處理\n",
+    "img_hw = cv2.resize(img_hw, None, fx=0.5, fy=0.5, interpolation=cv2.INTER_LINEAR)\n",
+    "img_mask = cv2.resize(img_mask, None, fx=0.5, fy=0.5, interpolation=cv2.INTER_LINEAR)\n",
+    "\n",
+    "# 取得遮照的左上跟右下的點\n",
+    "# 這邊你可以發現 transformation matrix 跟雙線性差值的結果會有一點點差異\n",
+    "all_h_coor, all_w_coor, all_c_coor = np.where(img_mask)\n",
+    "scale_point1 = (min(all_w_coor), min(all_h_coor))\n",
+    "scale_point2 = (max(all_w_coor), max(all_h_coor))\n",
+    "print('origin point1={}, origin point2={}'.format(point1, point2))\n",
+    "print('resize point1={}, resize point2={}'.format(scale_point1, scale_point2))\n",
+    "\n",
+    "\"\"\"\n",
+    "畫出人物矩形邊框\n",
+    "\"\"\"\n",
+    "cv2.rectangle(img_hw, scale_point1, scale_point2, (0, 0, 255), 3)\n",
+    "\n",
+    "while True:\n",
+    "    cv2.imshow('image', img_hw)\n",
+    "    k = cv2.waitKey(0)\n",
+    "    if k == 27:\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break"
    ]
   },
   {
