--- a/Day014_Batch Normalization_HW.ipynb
+++ b/Day014_Batch Normalization_HW.ipynb
@@ -51,20 +51,20 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d (Conv2D)              (None, 32, 32, 32)        128       \n",
+      "conv2d (Conv2D)              (None, 32, 32, 32)        896       \n",
       "_________________________________________________________________\n",
       "batch_normalization (BatchNo (None, 32, 32, 32)        128       \n",
       "_________________________________________________________________\n",
       "activation (Activation)      (None, 32, 32, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 32, 32, 32)        1056      \n",
+      "conv2d_1 (Conv2D)            (None, 32, 32, 32)        9248      \n",
       "_________________________________________________________________\n",
       "batch_normalization_1 (Batch (None, 32, 32, 32)        128       \n",
       "_________________________________________________________________\n",
       "activation_1 (Activation)    (None, 32, 32, 32)        0         \n",
       "=================================================================\n",
-      "Total params: 1,440\n",
-      "Trainable params: 1,312\n",
+      "Total params: 10,400\n",
+      "Trainable params: 10,272\n",
       "Non-trainable params: 128\n",
       "_________________________________________________________________\n"
      ]
@@ -81,14 +81,14 @@
     "#momentum: Momentum for the moving mean and the moving variance.\n",
     "#epsilon: Small float added to variance to avoid dividing by zero.\n",
     "\n",
-    "model.add(Conv2D(kernel_size=(1,1),filters=32,input_shape=input_shape))\n",
-    "model.add(BatchNormalization()) \n",
+    "model.add(Conv2D(kernel_size=(3,3), padding='same',filters=32,input_shape=input_shape))\n",
+    "model.add(BatchNormalization(momentum=0.99, epsilon=0.001)) \n",
     "model.add(Activation('sigmoid'))\n",
     "\n",
     "\n",
     "##、 Conv2D-BN-Activation('relu')\n",
-    "model.add(Conv2D(kernel_size=(1,1),filters=32))\n",
-    "model.add(BatchNormalization()) \n",
+    "model.add(Conv2D(kernel_size=(3,3), padding='same',filters=32,input_shape=input_shape))\n",
+    "model.add(BatchNormalization(momentum=0.99, epsilon=0.001)) \n",
     "model.add(Activation('relu'))\n",
     "\n",
     "\n",
