Day32 yolo practice ok

--- a/Day32_yolo_prediction_HW.ipynb
+++ b/Day32_yolo_prediction_HW.ipynb
@@ -7,7 +7,7 @@
     "## 作業\n",
     "相信今天的簡報還有程式碼範例的信息量已經足夠大了，可以多花時間消化簡報和程式碼範例，作業就問一個非常簡單的問題來確保大家有理解到重點，請問在 YOLOv1 的設計下，一張圖片最多能檢測出多少個 bbox 呢？\n",
     "\n",
-    "Ans: 5"
+    "Ans: 98=7x7x2"
    ]
   },
   {
