Day33 yolo 細節理解 - 網路輸出的後處理

--- a/Day33_YOLO 細節理解 - 網路輸出的後處理_HW.ipynb
+++ b/Day33_YOLO 細節理解 - 網路輸出的後處理_HW.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\n變少\\n'"
+       "'\\n如果IoU閾值設定太高，可能會造成物件重複偵測的問題\\nIOU太低，顯示的預測框會變少\\n'"
       ]
      },
      "execution_count": 1,
@@ -62,7 +62,8 @@
    ],
    "source": [
     "'''\n",
-    "變少\n",
+    "如果IoU閾值設定太高，可能會造成物件重複偵測的問題\n",
+    "IOU太低，顯示的預測框會變少\n",
     "'''"
    ]
   }
